--- a/plugins/fHDHR_plugin_origin_plutotv/web/plutotv.html
+++ b/plugins/fHDHR_plugin_origin_plutotv/web/plutotv.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h4 style="text-align: center;">{{ fhdhr.config.dict["main"]["servicename"] }} Status</h4>
+  <h4 style="text-align: center;">PlutTV Status</h4>
 
 
   <div class="container">
